# numanuma

./: CMakeLists.txt  FindNumaNuma.cmake  README
include/: numanuma.h  numanuma.hpp
include/numanuma/: bsd_impl.h  cpp_impl.hpp  linux_impl.h  osx_impl.h  windows_impl.h
lib/: CMakeLists.txt  cpp_wrapper.cpp  libnuma_impl.c  windows_impl.c
tests/: CMakeLists.txt  simple_test.c  simple_test.cpp
